--- a/ios-itunes-search-app/SearchResultVC.storyboard
+++ b/ios-itunes-search-app/SearchResultVC.storyboard
@@ -23,39 +23,35 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ITunesCell" rowHeight="180" id="3Y1-jm-tAT" customClass="ITunesCell" customModule="ios_itunes_search_app" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="180"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ITunesCell" rowHeight="70" id="3Y1-jm-tAT" customClass="ITunesCell" customModule="ios_itunes_search_app" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Y1-jm-tAT" id="MUQ-lo-vYH">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="179.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cDB-C6-VDY">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="179.5"/>
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EDa-2W-tF7">
-                                                            <rect key="frame" x="0.0" y="0.0" width="179.5" height="179.5"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="EDa-2W-tF7" secondAttribute="height" multiplier="1:1" id="W6C-me-pmU"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVP-ai-X90">
-                                                            <rect key="frame" x="179.5" y="0.0" width="195.5" height="179.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVP-ai-X90">
+                                                    <rect key="frame" x="69.5" y="0.0" width="305.5" height="69.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EDa-2W-tF7">
+                                                    <rect key="frame" x="0.0" y="0.0" width="69.5" height="69.5"/>
+                                                    <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstItem="AVP-ai-X90" firstAttribute="centerY" secondItem="cDB-C6-VDY" secondAttribute="centerY" id="zAk-yl-EJz"/>
+                                                        <constraint firstAttribute="width" secondItem="EDa-2W-tF7" secondAttribute="height" multiplier="1:1" id="W6C-me-pmU"/>
                                                     </constraints>
-                                                </stackView>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="cDB-C6-VDY" firstAttribute="leading" secondItem="MUQ-lo-vYH" secondAttribute="leading" id="a4F-7Z-2kT"/>
-                                                <constraint firstAttribute="bottom" secondItem="cDB-C6-VDY" secondAttribute="bottom" id="h51-qm-RwL"/>
-                                                <constraint firstAttribute="trailing" secondItem="cDB-C6-VDY" secondAttribute="trailing" id="hQV-eb-yhB"/>
-                                                <constraint firstItem="cDB-C6-VDY" firstAttribute="top" secondItem="MUQ-lo-vYH" secondAttribute="top" id="wwh-ri-WgM"/>
+                                                <constraint firstItem="EDa-2W-tF7" firstAttribute="top" secondItem="MUQ-lo-vYH" secondAttribute="top" id="Inq-jB-7UR"/>
+                                                <constraint firstAttribute="trailing" secondItem="AVP-ai-X90" secondAttribute="trailing" id="Pyx-w4-GKW"/>
+                                                <constraint firstAttribute="bottom" secondItem="EDa-2W-tF7" secondAttribute="bottom" id="ZAO-NR-63S"/>
+                                                <constraint firstItem="EDa-2W-tF7" firstAttribute="leading" secondItem="MUQ-lo-vYH" secondAttribute="leading" id="ZN0-fS-0st"/>
+                                                <constraint firstItem="AVP-ai-X90" firstAttribute="top" secondItem="MUQ-lo-vYH" secondAttribute="top" id="aWA-ij-dXD"/>
+                                                <constraint firstItem="AVP-ai-X90" firstAttribute="leading" secondItem="EDa-2W-tF7" secondAttribute="trailing" id="mKo-GC-PHE"/>
+                                                <constraint firstAttribute="bottom" secondItem="AVP-ai-X90" secondAttribute="bottom" id="uMA-n1-uPi"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
