--- a/ios-itunes-search-app/SearchResultVC.storyboard
+++ b/ios-itunes-search-app/SearchResultVC.storyboard
@@ -55,6 +55,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="AVP-ai-X90" secondAttribute="bottom" id="uMA-n1-uPi"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="artworkView" destination="EDa-2W-tF7" id="kKi-Fu-ZcI"/>
                                             <outlet property="titleLabel" destination="AVP-ai-X90" id="h92-hb-jMn"/>
